# QuantumSim

./: .gitignore  ARCH.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  Untitled
.claude/agents/: devops.md  physicist.md  ui_ux_designer.md  visualizer.md
.claude/skills/: cmake_build_skill.md  physics_engine_skill.md  raylib_graphics_skill.md  ui_ux_design_skill.md
.github/workflows/: release.yml
PhysicsEngine/: ElementData.cpp  ElementData.hpp  Entanglement.cpp  Entanglement.hpp  GridSolver.cpp  GridSolver.hpp  HydrogenModel.cpp  HydrogenModel.hpp  IQuantumObject.cpp  IQuantumObject.hpp  Laser.cpp  Laser.hpp  PhotoelectricEffect.cpp  PhotoelectricEffect.hpp  SpectralTransition.cpp  SpectralTransition.hpp  SpinSystem.cpp  SpinSystem.hpp  WavePacket.cpp  WavePacket.hpp
RenderEngine/: BlochSphereRenderer.cpp  BlochSphereRenderer.hpp  HydrogenRenderer.cpp  HydrogenRenderer.hpp  RenderEngine.hpp  WavePacketRenderer.cpp  WavePacketRenderer.hpp
UIHandler/: HelpPopup.cpp  HelpPopup.hpp  InspectorPanel.cpp  InspectorPanel.hpp  MenuBar.cpp  MenuBar.hpp  PeriodicTable.cpp  PeriodicTable.hpp  PropertiesPanel.cpp  PropertiesPanel.hpp  Slider.cpp  Slider.hpp  Toolbox.cpp  Toolbox.hpp
src/: IScenario.hpp  PotentialField.cpp  PotentialField.hpp  ProjectManager.cpp  ProjectManager.hpp  Scene.cpp  Scene.hpp  main.cpp
src/scenarios/: AtomViewerScenario.cpp  AtomViewerScenario.hpp  ComptonScenario.cpp  ComptonScenario.hpp  DeBroglieScenario.cpp  DeBroglieScenario.hpp  DoubleSlitScenario.cpp  DoubleSlitScenario.hpp  EntanglementScenario.cpp  EntanglementScenario.hpp  FreeParticleScenario.cpp  FreeParticleScenario.hpp  HeisenbergScenario.cpp  HeisenbergScenario.hpp  InfiniteWellScenario.cpp  InfiniteWellScenario.hpp  PhotoelectricScenario.cpp  PhotoelectricScenario.hpp  SpectrumScenario.cpp  SpectrumScenario.hpp  SpinScenario.cpp  SpinScenario.hpp  SuperpositionScenario.cpp  SuperpositionScenario.hpp  TunnelingScenario.cpp  TunnelingScenario.hpp
